--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body{
   display: flex;
   flex-direction: column;
   text-align: left;
-  padding-left: 60px;
+  padding-left: 50px;
   padding-top: 20px;
 }
 
@@ -102,6 +102,7 @@ p {
 
 .footer button {
   width: 100%;
+  height: 60px;
   padding: 10px 10px;
   background-color: lightcyan;
   color: #737270;
@@ -111,12 +112,33 @@ p {
   font-size: 23px;
 }
 
-.gray{
+.question{
   color: #737270;
+}
+
+.answer{
+  font-size: 35px;;
 }
 
 .fare{
  text-align: right;
+}
+
+.footer2 {
+  margin-top: 10px;
+  display: flex;
+}
+
+.footer2 button {
+  width: 75%;
+  height: 60px;
+  padding: 10px 10px;
+  background-color: rgb(36, 190, 39);
+  color: white;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+  font-size: 23px;
 }
 
 .bottom{
