--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ p {
 }
 
 .success-message {
-  color: green;
+  color: #069683;
   font-size: 60px;
 }
 
@@ -281,7 +281,7 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   display: none;
   z-index: 998;
 }
