--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ p {
   width: 75%;
   height: 60px;
   padding: 10px 10px;
-  background-color: rgb(36, 190, 39);
+  background-color: #79eb71;
   color: white;
   border: none;
   border-radius: 15px;
